<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reto2Activity">

    <Button
        android:id="@+id/volverReto2"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="120dp"
        android:text="@string/reto2Volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/imagen" />

    <Button
        android:id="@+id/sacarFoto"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="155dp"
        android:text="@string/sacarFoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>