<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reto4Activity">

    <TextView
        android:id="@+id/preguntasReto4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="132dp"
        android:text="¿Esto es una pregunta?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/si"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="340dp"
        android:text="@string/si"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/no"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="96dp"
        android:text="@string/no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/volverReto4"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="180dp"
        android:text="@string/volverReto4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/respuestaDada"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="272dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>